--- a/ui/main.ui
+++ b/ui/main.ui
@@ -9,9 +9,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>852</width>
-    <height>473</height>
+    <width>914</width>
+    <height>484</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="cursor">
    <cursorShape>ArrowCursor</cursorShape>
@@ -32,7 +38,7 @@
      <rect>
       <x>10</x>
       <y>50</y>
-      <width>401</width>
+      <width>481</width>
       <height>381</height>
      </rect>
     </property>
@@ -43,7 +49,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>520</x>
       <y>120</y>
       <width>221</width>
       <height>16</height>
@@ -61,7 +67,7 @@
    <widget class="QPushButton" name="btnCopyU">
     <property name="geometry">
      <rect>
-      <x>750</x>
+      <x>840</x>
       <y>150</y>
       <width>61</width>
       <height>31</height>
@@ -79,7 +85,7 @@
    <widget class="QPushButton" name="btnCopyP">
     <property name="geometry">
      <rect>
-      <x>750</x>
+      <x>840</x>
       <y>240</y>
       <width>61</width>
       <height>31</height>
@@ -97,7 +103,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>520</x>
       <y>210</y>
       <width>71</width>
       <height>16</height>
@@ -115,8 +121,8 @@
    <widget class="QPushButton" name="btnAdd">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>400</y>
+      <x>560</x>
+      <y>360</y>
       <width>91</width>
       <height>28</height>
      </rect>
@@ -133,8 +139,8 @@
    <widget class="QPushButton" name="btnDelete">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>400</y>
+      <x>660</x>
+      <y>360</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -151,8 +157,8 @@
    <widget class="QPushButton" name="btnEdit">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>400</y>
+      <x>760</x>
+      <y>360</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -169,7 +175,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>520</x>
       <y>30</y>
       <width>91</width>
       <height>31</height>
@@ -223,9 +229,9 @@
    <widget class="QLineEdit" name="tbP">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>510</x>
       <y>240</y>
-      <width>301</width>
+      <width>321</width>
       <height>31</height>
      </rect>
     </property>
@@ -241,9 +247,9 @@
    <widget class="QLineEdit" name="tbU">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>510</x>
       <y>150</y>
-      <width>301</width>
+      <width>321</width>
       <height>31</height>
      </rect>
     </property>
@@ -259,7 +265,7 @@
    <widget class="QLineEdit" name="tbKey">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>510</x>
       <y>70</y>
       <width>371</width>
       <height>31</height>
@@ -277,9 +283,9 @@
    <widget class="QLineEdit" name="tbSearch">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>60</x>
       <y>10</y>
-      <width>261</width>
+      <width>271</width>
       <height>31</height>
      </rect>
     </property>
@@ -292,10 +298,10 @@
      <enum>Qt::DefaultContextMenu</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnClear">
+   <widget class="QPushButton" name="btnClearForm">
     <property name="geometry">
      <rect>
-      <x>740</x>
+      <x>610</x>
       <y>400</y>
       <width>93</width>
       <height>28</height>
@@ -307,13 +313,13 @@
      </font>
     </property>
     <property name="text">
-     <string>Clear</string>
+     <string>Clear Form</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="cbSPass">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>510</x>
       <y>290</y>
       <width>151</width>
       <height>20</height>
@@ -328,6 +334,45 @@
      <string>Show Password</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnClearSelection">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>400</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Clear Selection</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnClearSearch">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>10</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Clear</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QMenuBar" name="menuBar">
@@ -335,7 +380,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>852</width>
+     <width>914</width>
      <height>21</height>
     </rect>
    </property>
@@ -349,6 +394,9 @@
   </widget>
   <action name="actionAbout">
    <property name="text">
+    <string>About</string>
+   </property>
+   <property name="iconText">
     <string>About</string>
    </property>
   </action>
